# coppeliasim-aseba

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  README.md  api_Aseba.md  api_EPuck.md  api_Thymio.md  aseba_vm_win.patch  callbacks.xml  generate_thymio_lua.py  simAseba.lua  simThymio.lua  vcpkg.json
.github/workflows/: release.yaml
CMakeModules/: FindDNSSD.cmake  zeroconf.cmake
helpers/: api.md.j2  generate.py  generate_lua.py  generate_markdown_api.py  generate_split_reference.py
include/: aseba_epuck.h  aseba_epuck_natives.h  aseba_network.h  aseba_node.h  aseba_script.h  aseba_thymio2.h  aseba_thymio2_natives.h  coppeliasim_aseba_node.h  coppeliasim_epuck.h  coppeliasim_robot.h  coppeliasim_thymio2.h  epuckaseba.c  logging.h  macros_win.h
lua/: callbacks.xml  simAseba.lua  simEPuck.lua  simThymio.lua
models/: e-puck-aseba.ttm  mighty_thymio.ttm  thymio.ttm
models/4.4/: mighty_thymio.ttm
models/v1/: thymio.ttm
models/v3/: thymio.ttm
scenes/: dev_mighty_thymio.ttt  dev_mighty_thymio3.ttt  how_to_hide_objects.ttt
src/: aseba_default_description.c  aseba_epuck.cpp  aseba_epuck_descriptions.c  aseba_epuck_natives.cpp  aseba_network.cpp  aseba_node.cpp  aseba_script.cpp  aseba_thymio2.cpp  aseba_thymio2_descriptions.c  aseba_thymio2_natives.cpp  coppeliasim_epuck.cpp  coppeliasim_robot.cpp  coppeliasim_thymio2.cpp  plugin.cpp  register.cpp  test.cpp
